<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group>

        <item android:id="@+id/nav_item_main"
            android:title="@string/menuRunning"
            android:icon="@drawable/camino"/>
        <item android:id="@+id/nav_item_record"
            android:icon="@drawable/ic_gallery"
            android:title="@string/menuRecord"/>
        <item android:id="@+id/nav_item_premium"
            android:icon="@android:drawable/star_on"
            android:title="@string/menuBecamePremium"/>

    </group>

    <item android:title="@string/menuAccount">
        <menu>
            <item android:id="@+id/nav_item_clearPreferences"
                android:icon="@android:drawable/ic_popup_sync"
                android:title="@string/menuClearPreferences"/>
            <item android:id="@+id/nav_item_signOut"
                android:icon="@drawable/ic_signout"
                android:title="@string/closedSession"/>
        </menu>
    </item>

</menu>