<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/gray_dark"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/ivBanner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@mipmap/banner"
            />
        <TextView
            android:id="@+id/tvInvitation"
            style="@style/viewCustom"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:text="@string/invitation"
            android:textColor="@color/orange"
            android:gravity="center_horizontal"/>
        <EditText
            android:id="@+id/etEmail"
            style="@style/viewCustom"
            android:paddingTop="10dp"
            android:hint="@string/email"
            android:layout_marginTop="0dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"/>
        <EditText
            android:id="@+id/etPassword"
            style="@style/viewCustom"
            android:paddingTop="15dp"
            android:hint="@string/password"
            android:layout_marginTop="0dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"/>

        <EditText
            android:id="@+id/etRepeatPassword"
            style="@style/viewCustom"
            android:paddingTop="15dp"
            android:hint="Repetir contraseña"
            android:layout_marginTop="0dp"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"/>

        <TextView
            android:id="@+id/tvAlert"
            style="@style/viewCustom"
            android:textSize="15sp"
            android:text="@string/errorSession"
            android:textColor="@color/salmon"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tvLogin"
            style="@style/viewCustom"
            android:background="@color/green"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:textStyle="bold"
            android:onClick="login"/>

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/viewCustom"
            android:gravity="center_horizontal"
            android:text="@string/forgotPassword"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:textSize="14dp"
            android:onClick="forgotPassword"/>

        <LinearLayout
            android:id="@+id/lyTerms"
            style="@style/viewCustom"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cbAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/accept"
                android:textColor="@color/white"/>
            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textSize="14sp"
                android:textColor="@color/salmon"
                android:layout_marginLeft="5dp"
                android:onClick="goTerms"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_google"
            android:text="@string/accounts"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:paddingLeft="30dp"
            android:onClick="callSignInGoogle"/>
        <Button
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:text="@string/accounts"
            android:textSize="22sp"
            android:textAlignment="textStart"
            android:paddingLeft="30dp"
            android:drawableLeft="@drawable/ic_facebook"
            android:onClick="callSignInFacebook"/>

    </LinearLayout>

</ScrollView>